# PoC

./: .gitignore  README.md  dev.md
data/: buyer_sk.json  ciminion_enc_input.json  mac_ct_iv.json  mac_iv.json  prove3_input.json  prove3_output.json  readme.txt  seller_sk.json
data_prep/: Cargo.toml
data_prep/src/: lib.rs  main.rs  prove1.rs  prove2.rs  prove3.rs
dec/: dec_pt.circom  dec_sk.circom
prove1/: makefile  prepare.bash  prove1.circom
prove2/: makefile  prove2.circom  prove2_ct.circom  prove2_mac.circom
prove3/: makefile  prepare.bash  prove3.circom  prove3_private_ct.circom  verify.sol
prove4/: makefile  prove2.circom
test/: package.json  plaintext.json  pt_dec.js  sk_dec.js  test_dec_sk.json
