[package]
name = "data_prep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde_json = "1.0.67"
num-bigint = { vertion = "0.4.4", features = ["serde"]}
num-bigint-dig = "0.7.0"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }