[package]
name = "data_prep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde_json = "1.0.67"
num-bigint = { vertion = "0.4.4", features = ["serde"]}
num-bigint-dig = "0.7.0"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.7", features = ["derive"] }

# for arkworks circom capabilities 
ark-circom = { git = "https://github.com/gakonst/ark-circom.git" }

# ZKP Generation
ark-crypto-primitives = { version = "=0.4.0" }
ark-ec = { version = "=0.4.1", default-features = false, features = ["parallel"] }
ark-ff = { version = "=0.4.1", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-poly = { version = "=0.4.1", default-features = false, features = ["parallel"] }
ark-relations = { version = "=0.4.0", default-features = false }
ark-serialize = { version = "=0.4.1", default-features = false }

# WASM operations
wasmer = { version = "=2.3.0", default-features = false }
fnv = { version = "=1.0.7", default-features = false }
num = { version = "=0.4.0" }

